Adjusting index footer to address clipping issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -190,8 +190,6 @@ li {
 
 #index-footer {
   text-align: center;
-  padding: 1rem;
-  height: 50px;
 }
 
 @import "mobile";
